[gd_scene load_steps=3 format=3 uid="uid://1ty4ejmxyogj"]

[ext_resource type="Script" path="res://src/shop_menu/shop_menu.gd" id="1_c8stv"]
[ext_resource type="PackedScene" uid="uid://8v1xjxdn6brq" path="res://src/ui/upgrade_card.tscn" id="2_wdcmq"]

[node name="ShopMenu" type="Node2D"]
script = ExtResource("1_c8stv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonMainMenu" type="Button" parent="CanvasLayer"]
offset_right = 16.0
offset_bottom = 16.0
text = "Main Menu"

[node name="UpgradeCard" parent="CanvasLayer" instance=ExtResource("2_wdcmq")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -57.0
offset_right = 18.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CanvasLayer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
